--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,8 @@
 server {
     listen      80;
-    server_name api.nizamtodo.ru www.api.nizamtodo.ru 134.0.113.175;
+    server_name api.roomgive.ru www.api.roomgive.ru 134.0.113.175;
 
     location / {
-        proxy_pass http://nizamtodoapi:8080/api/;
+        proxy_pass http://vamaapi:8080/api/;
     }
 }
