--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,36 +24,36 @@ services:
     command: -user=${DATABASE_USERNAME} -password=${DATABASE_PASSWORD} -url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_DB} migrate
     networks:
       - vama-backend-network
-#  vamaapi:
-#    image: vama-api:latest
-#    build:
-#      context: .
-#    container_name: vama-api
-#    env_file:
-#      - .env.prod
-#    ports:
-#      - 8080
-#    restart: unless-stopped
-#    environment:
-#      - SPRING_DATASOURCE_URL=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_DB}
-#      - SPRING_DATASOURCE_USERNAME=${DATABASE_USERNAME}
-#      - SPRING_DATASOURCE_PASSWORD=${DATABASE_PASSWORD}
-#      - SPRING_JPA_HIBERNATE_DDL_AUTO=validate
-#    depends_on:
-#      - postgres
-#    networks:
-#      - vama-backend-network
-#  nginx:
-#    image: nginx:alpine
-#    container_name: vama-nginx
-#    volumes:
-#      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-#    ports:
-#      - 80:80
-#    depends_on:
-#      - vamaapi
-#    networks:
-#      - vama-backend-network
+  vamaapi:
+    image: vama-api:latest
+    build:
+      context: .
+    container_name: vama-api
+    env_file:
+      - .env.prod
+    ports:
+      - 8080
+    restart: unless-stopped
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_DB}
+      - SPRING_DATASOURCE_USERNAME=${DATABASE_USERNAME}
+      - SPRING_DATASOURCE_PASSWORD=${DATABASE_PASSWORD}
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=validate
+    depends_on:
+      - postgres
+    networks:
+      - vama-backend-network
+  nginx:
+    image: nginx:alpine
+    container_name: vama-nginx
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - 80:80
+    depends_on:
+      - vamaapi
+    networks:
+      - vama-backend-network
 networks:
   vama-backend-network:
     driver: bridge
