--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen      80;
-    server_name api.roomgive.ru www.api.roomgive.ru 134.0.113.175;
+    server_name api.vama-company.ru www.api.vama-company.ru 95.163.236.86;
 
     location / {
         proxy_pass http://vamaapi:8080/api/;
