--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8081
 
 server.servlet.context-path=/api
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
@@ -14,3 +14,14 @@ spring.jpa.show-sql=false
 
 # ????????? ??? Spring JDBC
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+# RabbitMq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+rabbitmq.exchange.name=javaguides_exchange
+rabbitmq.queue.json.name=javaguides_json
+rabbitmq.routing.json.key=javaguides_routing_json_key
