--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,17 @@ services:
       - vamaapi
     networks:
       - vama-backend-network
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: rabbitmq
+    ports:
+      - 5672:5672
+      - 15672:15672
+    volumes:
+      - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
+      - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
+    networks:
+      - vama-backend-network
 networks:
   vama-backend-network:
     driver: bridge
