--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 # RabbitMq
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=${RABBITMQ_HOST}
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
