--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,6 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-rabbitmq.exchange.name=javaguides_exchange
+rabbitmq.exchange.name=backend_exchange
 rabbitmq.queue.json.name=products
 rabbitmq.routing.json.key=javaguides_routing_json_key
