--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,5 +23,5 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 rabbitmq.exchange.name=backend_exchange
-rabbitmq.queue.json.name=products
+rabbitmq.queue.json.name=orders
 rabbitmq.routing.json.key=javaguides_routing_json_key
