--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ DATABASE_PORT=54321
 DATABASE_DB=vama-local
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=password
-RABBITMQ_HOST=localhost
+RABBITMQ_HOST=147.45.109.145
