--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,21 @@
 server {
-    listen      80;
+    listen 443;
+    ssl on;
+    ssl_certificate /etc/nginx/ssl/api.vama-company.ru.crt;
+    ssl_certificate_key /etc/nginx/ssl/api.vama-company.ru.key;
+
     server_name api.vama-company.ru www.api.vama-company.ru 95.163.242.101;
 
     location / {
         proxy_pass http://vamaapi:8080/api/;
     }
 }
+
+; server {
+;     listen      80;
+;     server_name api.vama-company.ru www.api.vama-company.ru 95.163.242.101;
+;
+;     location / {
+;         proxy_pass http://vamaapi:8080/api/;
+;     }
+; }
