--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,8 @@
 server {
     listen 443;
     ssl on;
-    ssl_certificate /etc/nginx/ssl/api.vama-company.ru.crt;
-    ssl_certificate_key /etc/nginx/ssl/api.vama-company.ru.key;
+    ssl_certificate /etc/ssl/api.vama-company.ru.crt;
+    ssl_certificate_key /etc/ssl/api.vama-company.ru.key;
 
     server_name api.vama-company.ru www.api.vama-company.ru 95.163.242.101;
 
