--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
     container_name: vama-nginx
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./ssl:/etc/ssl
+      - ./ssl:/etc/ssl/
     ports:
       - 80:80
     depends_on:
