--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,5 @@
 server {
-    listen 443;
-    ssl on;
+    listen 443 ssl;
     ssl_certificate /etc/ssl/api.vama-company.ru.crt;
     ssl_certificate_key /etc/ssl/api.vama-company.ru.key;
 
