--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ server {
     ssl_certificate /etc/ssl/api.vama-company.ru.crt;
     ssl_certificate_key /etc/ssl/api.vama-company.ru.key;
 
-    server_name api.vama-company.ru www.api.vama-company.ru 95.163.242.101;
+    server_name vama-company.ru www.vama-company.ru 95.163.242.101;
 
     location / {
         proxy_pass http://vamaapi:8080/api/;
