--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,43 @@
-server {
-    listen 443 ssl;
-    listen 80;
-    ssl_certificate /etc/ssl/api.vama-company.ru.crt;
-    ssl_certificate_key /etc/ssl/api.vama-company.ru.key;
+worker_processes 1;
 
-    server_name api.vama-company.ru www.api.vama-company.ru 95.163.242.101;
+events { worker_connections 1024; }
 
-    location / {
-        proxy_pass http://vamaapi:8080/api/;
+http {
+
+    sendfile on;
+    large_client_header_buffers 4 32k;
+
+    server {
+        listen 80;
+        server_name api.vama-company.ru www.api.vama-company.ru 95.163.242.101;
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name api.vama-company.ru www.api.vama-company.ru 95.163.242.101;
+
+        ssl_certificate /etc/ssl/api.vama-company.ru.crt;
+        ssl_certificate_key /etc/ssl/api.vama-company.ru.key;
+
+        location / {
+            proxy_pass http://vamaapi:8080/api/;
+            proxy_redirect     off;
+            proxy_http_version 1.1;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header   Upgrade $http_upgrade;
+            proxy_set_header   Connection keep-alive;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+            proxy_set_header   X-Forwarded-Host $server_name;
+            proxy_buffer_size           128k;
+            proxy_buffers               4 256k;
+            proxy_busy_buffers_size     256k;
+        }
     }
 }
