--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,10 @@ http {
     sendfile on;
     large_client_header_buffers 4 32k;
 
+    upstream web-api {
+        server vamaapi:8080;
+    }
+
     server {
         listen 80;
         server_name api.vama-company.ru www.api.vama-company.ru 95.163.242.101;
@@ -24,7 +28,7 @@ http {
         ssl_certificate_key /etc/ssl/api.vama-company.ru.key;
 
         location / {
-            proxy_pass http://vamaapi:8080/api/;
+            proxy_pass http://web-api/api/;
             proxy_redirect     off;
             proxy_http_version 1.1;
             proxy_cache_bypass $http_upgrade;
