--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,4 @@
-worker_processes 1;
-
-events { worker_connections 1024; }
-
 http {
-
-    sendfile on;
-    large_client_header_buffers 4 32k;
-
-    upstream web-api {
-        server vamaapi:8080;
-    }
 
     server {
         listen 80;
@@ -28,20 +17,7 @@ http {
         ssl_certificate_key /etc/ssl/api.vama-company.ru.key;
 
         location / {
-            proxy_pass http://web-api/api/;
-            proxy_redirect     off;
-            proxy_http_version 1.1;
-            proxy_cache_bypass $http_upgrade;
-            proxy_set_header   Upgrade $http_upgrade;
-            proxy_set_header   Connection keep-alive;
-            proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Proto $scheme;
-            proxy_set_header   X-Forwarded-Host $server_name;
-            proxy_buffer_size           128k;
-            proxy_buffers               4 256k;
-            proxy_busy_buffers_size     256k;
+            proxy_pass http://vamaapi:8080/api/;
         }
     }
 }
