--- a/nginx.test.conf
+++ b/nginx.test.conf
@@ -6,3 +6,17 @@
 ;         proxy_pass http://vamaapi:8080/api/;
 ;     }
 ; }
+
+
+; server {
+;     listen 443 ssl;
+;     listen 80;
+;     ssl_certificate /etc/ssl/api.vama-company.ru.crt;
+;     ssl_certificate_key /etc/ssl/api.vama-company.ru.key;
+;
+;     server_name api.vama-company.ru www.api.vama-company.ru 95.163.242.101;
+;
+;     location / {
+;         proxy_pass http://vamaapi:8080/api/;
+;     }
+; }
