--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
     ports:
       - 8080
     restart: unless-stopped
+    volumes:
+      - ../upload:./upload
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_DB}
       - SPRING_DATASOURCE_USERNAME=${DATABASE_USERNAME}
