--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,5 @@ spring.rabbitmq.password=guest
 rabbitmq.exchange.name=backend_exchange
 rabbitmq.queue.json.name=orders
 rabbitmq.routing.json.key=javaguides_routing_json_key
+
+IMAGES_PATH=${IMAGES_PATH}
