--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ DATABASE_DB=vama-local
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=password
 RABBITMQ_HOST=localhost
+IMAGES_PATH=./upload/products
