--- a/.env.prod
+++ b/.env.prod
@@ -4,3 +4,4 @@ DATABASE_DB=vama
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=nspowqkpoADS112!dsf
 RABBITMQ_HOST=rabbitmq
+IMAGES_PATH=/opt/upload/products
